apps/bux-server/bux/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bux-server-ingress
  labels:
    app: bux
    instance: bux-server
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - bux.buxbit.net
      secretName: bux-server-tls
  rules:
    - host: bux.buxbit.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bux-server
                port:
                  name: web
